fix bandana z-index bug

--- a/styles/bandana.css
+++ b/styles/bandana.css
@@ -15,6 +15,7 @@
 #bandana.focus{
   -webkit-transition-duration: 0.5s;
   opacity:1; 
+  z-index:1001;
 }
 
 #bandana{
@@ -24,11 +25,11 @@
   font-size : 2em;
   padding: 5%;
   color : white;
-  max-height:80%;
+  max-height:75%;
   width : 85%;
   overflow-y:auto;
   position:fixed;
-  z-index:1001;
+  z-index:1000;
   border-radius:1em 1em 1em 1em / 1em 1em 1em 1em;
   opacity:0;
   -webkit-transition-property: opacity;
